--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -288,7 +288,7 @@ function getInfo(){
 }
 
 function selectLocation(){
-  debugger
+  
   $('#LocationsTable tbody').on('click', 'tr', function(){
     if ($(this).hasClass('selected')) {
       $(this).removeClass('selected');
@@ -296,18 +296,21 @@ function selectLocation(){
       $('#LocationsTable').DataTable().$('tr.selected').removeClass('selected');
       $(this).addClass('selected');
   }
+  debugger
   TableBody = document.getElementsByTagName('tr');
   let variable = '';
-  TableBody.forEach(element => {
-    let className = element.className;
+
+  for (let x = 0; x < TableBody.length; index++) {
+    let className = TableBody[x].className;
     let flag = className.indexOf('selected');
     if(flag !== -1){
-      variable = element.children[0].innerText;
+      variable = TableBody[x].children[0].innerText;
     }else{
       return;
     }
-  });
+  }
   alert(variable);
+
   });
 }
 </script>
