--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -300,7 +300,7 @@ function selectLocation(){
   TableBody = document.getElementsByTagName('tr');
   let variable = '';
 
-  for (let x = 0; x < TableBody.length; index++) {
+  for (let x = 0; x < TableBody.length; x++) {
     debugger
     let className = TableBody[x].className;
     let flag = className.indexOf('selected');
