--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -319,6 +319,7 @@ function setInformation(name){
     }
   });
   $('#NameLocation').val(locationSelected.codigo_locacion);
+  $('#Epg').val(locationSelected.epg);
   $('#Menu').val(locationSelected.menu);
   $('#Messages').val(locationSelected.mensajes);
   $('#InitScreen').val(locationSelected.menu);
