--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -380,7 +380,7 @@ function setAllInfo(){
     let option = document.createElement('option');
     option.text = element.codigo_miembro;
     option.value = element.codigo_miembro;
-    selectModules.add(option);
+    selectMembers.add(option);
   });
 
 }
