--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -352,7 +352,7 @@ function setInformation(name){
   $('#Messages').val(locationSelected.mensajes);
   $('#InitScreen').val(locationSelected.menu);
   $('#Package').val(locationSelected.id_paquete);
-  $('#Member').val(codigo_miembro);
+  $('#Member').val(locationSelected.codigo_miembro);
   
 }
 
