--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -346,6 +346,7 @@ function setInformation(name){
       locationSelected = element;
     }
   });
+  console.log(locationSelected);
   $('#NameLocation').val(locationSelected.codigo_locacion);
   $('#Epg').val(locationSelected.epg);
   $('#Menu').val(locationSelected.menu);
