--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -351,7 +351,7 @@ function setInformation(name){
   $('#Epg').val(locationSelected.epg);
   $('#Menu').val(locationSelected.menu);
   $('#Messages').val(locationSelected.mensajes);
-  $('#InitScreen').val(locationSelected.menu);
+  $('#InitScreen').val(locationSelected.id_modulo);
   $('#Package').val(locationSelected.id_paquete);
   $('#Member').val(locationSelected.codigo_miembro);
   
