--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -108,8 +108,9 @@ The above copyright notice and this permission notice shall be included in all c
                       </div>
 
 
-                      <a href="javascript:;" class="btn btn-primary btn-round" id="btnActualizar">Actualizar</a>
-                      <a href="javascript:;" class="btn btn-primary btn-round" id="btnRegistrar">Registrar</a>
+                      <!-- <a href="javascript:;" class="btn btn-primary btn-round" id="btnActualizar">Actualizar</a>
+                      <a href="javascript:;" class="btn btn-primary btn-round" id="btnRegistrar">Registrar</a> -->
+                    <button class="btn btn-primary btn-round">Actualizar</button>
                     </div>
                   </div>
                 </div>
