--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -106,11 +106,8 @@ The above copyright notice and this permission notice shall be included in all c
                           <option value="Default"  selected>Seleccione miembro</option>
                         </select>
                       </div>
-
-
-                      <!-- <a href="javascript:;" class="btn btn-primary btn-round" id="btnActualizar">Actualizar</a>
-                      <a href="javascript:;" class="btn btn-primary btn-round" id="btnRegistrar">Registrar</a> -->
-                    <button class="btn btn-primary btn-round">Actualizar</button>
+                    <button class="btn btn-primary btn-round" id="btnActualizar">Actualizar</button>
+                    <button class="btn btn-primary btn-round" id="btnRegistrar">Registrar</button>
                     </div>
                   </div>
                 </div>
