--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -193,7 +193,7 @@ The above copyright notice and this permission notice shall be included in all c
     getLocations();
     setAllInfo();
 
-    $('#btnActualizar').prop('disabled', true);
+    document.getElementById('btnActualizar').disabled = true;
     
    
 
@@ -319,12 +319,12 @@ function selectLocation(){
   $('#LocationsTable tbody').on('click', 'tr', function(){
     if ($(this).hasClass('selected')) {
       $(this).removeClass('selected');
-      $('#btnRegistrar').prop('disabled', false);
+      document.getElementById('btnRegistrar').disabled = false;
   } else {
       $('#LocationsTable').DataTable().$('tr.selected').removeClass('selected');
       $(this).addClass('selected');
-      $('#btnActualizar').prop('disabled', false);
-      $('#btnRegistrar').prop('disabled', true);
+      document.getElementById('btnActualizar').disabled = false;
+      document.getElementById('btnRegistrar').disabled = true;
   }
   
   TableBody = document.getElementsByTagName('tr');
