--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -192,9 +192,8 @@ The above copyright notice and this permission notice shall be included in all c
     console.log(AllLocations);
     getLocations();
     setAllInfo();
-
     document.getElementById('btnActualizar').disabled = true;
-    
+    sendInfo();
    
 
     
