--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -406,14 +406,14 @@ function setAllInfo(){
 
 
 function sendInfo(){
-  $('$btnActualizar').click( function(){
+  $('#btnActualizar').click( function(){
 
     alert('ya casi');
 
   });
 
 
-  $('$btnRegistrar').click( function(){
+  $('#btnRegistrar').click( function(){
 
     alert('sdf');
 
