--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -172,6 +172,7 @@ The above copyright notice and this permission notice shall be included in all c
   // Locaciones
   let AllLocations = [];
   let LocationsToTable = [];
+  let locationName = '';
 
   // Modulos
   let AllModules = [];
@@ -332,7 +333,6 @@ function selectLocation(){
   }
   
   TableBody = document.getElementsByTagName('tr');
-  let locationName = '';
 
   for (let x = 0; x < TableBody.length; x++) {
     let className = TableBody[x].className;
@@ -410,6 +410,12 @@ function setAllInfo(){
 
 
 function sendInfo(){
+  let locationSelected = [];
+  AllLocations.forEach(element => {
+    if(element.codigo_locacion == locationName){
+      locationSelected = element;
+    }
+  });
   $('#btnActualizar').click( function(){
 
     $.ajax({
@@ -417,6 +423,7 @@ function sendInfo(){
       url: SourceController+'Location.php',
       data: { 
           Option    : 'UpdateLocation',
+          LocationId: locationSelected.id_locacion,
           codigo_miembro : $('#Member').val(),
           epg: $('#Epg').val(),
           menu: $('#Menu').val(),
