--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -412,11 +412,11 @@ function setAllInfo(){
 function sendInfo(){
   let locationSelected = [];
   AllLocations.forEach(element => {
-    if(element.codigo_locacion == locationName){
+    if(element.codigo_locacion == $('#NameLocation').val()){
       locationSelected = element;
     }
   });
-  console.log(locationSelected);
+  console.log(locationSelected.id_locacion);
   $('#btnActualizar').click( function(){
 
     $.ajax({
