--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -347,6 +347,7 @@ function selectLocation(){
 }
 
 function setInformation(name){
+  debugger
   let locationSelected = [];
   AllLocations.forEach(element => {
     if(element.codigo_locacion == name){
