--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -15,10 +15,10 @@ The above copyright notice and this permission notice shall be included in all c
 <head>
   <meta charset="utf-8" />
   <link rel="apple-touch-icon" sizes="76x76" href="../../../../../Assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="../../../../../Assets/img/favicon.png">
+  <link rel="icon" type="image/png" href="../../../../Media/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
-    Material Dashboard by Creative Tim
+    Locaciones
   </title>
   <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
@@ -39,8 +39,7 @@ The above copyright notice and this permission notice shall be included in all c
             <div class="col-md-8">
               <div class="card">
                 <div class="card-header card-header-primary">
-                  <h4 class="card-title">Edit Profile</h4>
-                  <p class="card-category">Complete your profile</p>
+                  <h4 class="card-title">Locaciones</h4>
                 </div>
                 <div class="card-body">
                   <div class="tab-content">
@@ -48,10 +47,8 @@ The above copyright notice and this permission notice shall be included in all c
                           <table id="LocationsTable" class="ui celled table" style="width:100%"></table>
                       </div>
                       <div class="tab-pane" id="messages">
-
                       </div>
                       <div class="tab-pane" id="settings">
-
                       </div>
                   </div>
               </div>
@@ -259,8 +256,7 @@ function getTables(){
         { title: "Paquete asignado" },
         { title: "Miembro" },
     ],
-    "paging": false,
-    "searching": false
+    "lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "All"]]
 });
 }
 
