--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -15,7 +15,7 @@ The above copyright notice and this permission notice shall be included in all c
 <head>
   <meta charset="utf-8" />
   <link rel="apple-touch-icon" sizes="76x76" href="../../../../../Assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="../../../../Media/favicon.png">
+  <link rel="icon" type="image/png" href="../../../../Media/icon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
     Locaciones
@@ -439,6 +439,10 @@ function sendInfo(){
 
   $('#btnRegistrar').click( function(){
 
+
+    let Empty = isEmpty();
+    console.log(Empty);
+
     $.ajax({
       type: "POST",
       url: SourceController+'Location.php',
@@ -459,6 +463,33 @@ function sendInfo(){
     }); 
 
   });
+}
+
+function isEmpty(){
+  let selects = document.getElementsByTagName('select');
+  let EmptySelects = [];
+
+  for (let x = 1; x < selects.length; index++) {
+    if(selects[x].value == 'Default'){
+      if(selects[x].id == 'Epg'){
+        EmptySelects.push('Guia de programacion');
+      } else if(selects[x].id == 'Menu'){
+        EmptySelects.push('Menu');
+      } else if(selects[x].id == 'Messages'){
+        EmptySelects.push('Mensajes');
+      } else if(selects[x].id == 'InitScreen'){
+        EmptySelects.push('Pantalla de inicio');
+      }
+      else if(selects[x].id == 'Package'){
+        EmptySelects.push('Paquete asignado');
+      }
+      else if(selects[x].id == 'Member'){
+        EmptySelects.push('Miembro asignado');
+      }
+    }
+  }
+
+  return EmptySelects;
 }
 </script>
 
