--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -438,6 +438,9 @@ function sendInfo(){
             text: "La locacion con el nombre: "+$('#NameLocation').val()+" se actualizo exitosamente",
             icon: "success",
             button: "Hecho",
+            function(){ 
+              location.reload();
+          }
           });
         }
       }); 
@@ -491,6 +494,9 @@ $('#btnRegistrar').click( function(){
             text: "La locacion con el nombre: "+$('#NameLocation').val()+" se registro exitosamente",
             icon: "success",
             button: "Hecho",
+            function(){ 
+              location.reload();
+          }
           });
         }
       });
