--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -433,16 +433,11 @@ function sendInfo(){
         }, 
         async: false,
         success: function (response) {
-          swal({
-            title: "Locacion actualizada",
-            text: "La locacion con el nombre: "+$('#NameLocation').val()+" se actualizo exitosamente",
-            icon: "success",
-            button: "Hecho",
-
-          },
-          function(){ 
-            location.reload();
-          });
+          swal({title: "Locacion actualizada", text: "La locacion con el nombre: "+$('#NameLocation').val()+" se actualizo exitosamente", type: 
+              "success"}).then(function(){ 
+                location.reload();
+                }
+              );
         }
       }); 
     } else{
@@ -490,15 +485,10 @@ $('#btnRegistrar').click( function(){
         }, 
         async: false,
         success: function (response) {
-          swal({
-            title: "Locacion registrada",
-            text: "La locacion con el nombre: "+$('#NameLocation').val()+" se registro exitosamente",
-            icon: "success",
-            button: "Hecho",
-          },
-          function(){ 
+          swal({title: "Locacion registrada", text: "La locacion con el nombre: "+$('#NameLocation').val()+" se registro exitosamente", type: 
+          "success"}).then(function(){ 
             location.reload();
-          }
+            }
           );
         }
       });
