--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -60,7 +60,8 @@ The above copyright notice and this permission notice shall be included in all c
                     <div class="card-body">
                       <div>
                         <h6 class="card-category text-gray">Nombre Locacion</h6>
-                        <input type="text" id="NameLocation" class="form-control" placeholder="Inserte nombre locacion">
+                        <input type="text" id="NameLocation" class="form-control" placeholder="Inserte nombre locacion"
+                        minlength="4" maxlength="15" required size="10">
                       </div>
                       <div>
                         <h6 class="card-category text-gray">Guia de programación</h6>
